--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -16,24 +16,24 @@
 	.darkOverlay {background:none;}
 	.pageTitle {font-size:1.4em; margin:0px; padding:0px; background: none; color: $lightBGTextColor; text-transform: none;}
 }
-.break.darkbg {background:none; color:$darkBGTextColor;}
+.break.darkbg {background: none; color: $darkBGTextColor;}
 
 
 .testimonial blockquote,
-.getstarted section {font-size:2.2em; line-height:1.2em; margin:0px auto;
-	p {margin:0px;}
+.getstarted section {font-size: 2.2em; line-height: 1.2em; margin: 0px auto;
+	p {margin: 0px;}
 }
 
 @media screen and (max-width: 600px) {
 	.banner li .slidetextBG { 
-		h1 {font-size:50px; padding:22px 0px;}
+		h1 {font-size: 50px; padding: 22px 0px;}
 	}
 	.homeWidgets {position: relative; z-index: 900; margin-top:-50%;}
 }
 
 @media screen and (max-width: 480px) {
-	.banner li .slidetextBG { margin-top:20%;
-		h1 {font-size:35px; padding:18px 0px;}
+	.banner li .slidetextBG { margin-top: 20%;
+		h1 {font-size: 35px; padding: 18px 0px;}
 	}	
 }
 
@@ -47,25 +47,35 @@
 .page-content,
 .entry-content,
 .entry-summary {margin: 0.5em 0 0;}
-.page-links {clear: both;margin: 0 0 1.5em;}
+.page-links {clear: both; margin: 0 0 1.5em;}
 
 
 /* ----- post archive / list styles -- */
 #latestNewsContainer,
-#latest-news {padding-top:125px;
-	main .pageTitle {font-size:1.4em; margin:0px; padding:0px; background: none; text-transform: none;
+#latest-news {
+	padding-top:125px;
+	main .pageTitle {
+		font-size:1.4em; margin:0px; padding:0px; background: none; text-transform: none;
 		a,
 		a:visited {color: $darkBGTextColor}
 		a:hover,
 		a:visited:hover,
 		a:focus {color: $linkColor;}
 	}
+	.entry-content {
+		h1 {font-size: 18px;}
+		h2 {font-size: 16px;}
+		h3 {font-size: 14px;}
+		h4 {font-size: 13px;}
+		h5 {font-size: 12px;}
+		h6 {font-size: 11px;}
+	}
 }
 .home,
 .blog {
-	.hentry { margin-top:20px;}
+	.hentry { margin-top: 20px; }
 }
-.thumbnailImage {@include thumbnailstyle;}
+.thumbnailImage { @include thumbnailstyle; }
 .entry-header {
 	.category {font-weight:700; font-size:0.9em;}
 	.entryTitle {padding:0px; font-size:1.5em; line-height: 1.2em;
@@ -89,11 +99,10 @@ footer.entry-meta {text-align: right;}
 
 #masonry .post {width:28%; margin-right:4%;  padding-bottom:10px; margin-bottom:20px; border-bottom:1px solid rgba(0,0,0,0.2); overflow:hidden; display: block;
 	img {max-width: 100%;}
+
 }
 .category-wods {
 	div.entry-content + p {margin:0px; padding:0px; height:0px;}
-	h2 {font-size:0.9em;}
-	h3 {font-size: 1.3em;}
 }
 
 /* ----- page -- */
