--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ button,
 input,
 select,
 textarea {
-  color: white;
+  color: #fff;
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
   font-size: 1.4rem;
@@ -438,7 +438,7 @@ input[type="reset"],
 input[type="submit"] {
   border-radius: 1px;
   background: rgba(192, 1, 6, 0.7);
-  color: white;
+  color: #fff;
   display: block;
   width: 100%;
   clear: both;
@@ -453,7 +453,7 @@ input[type="submit"] {
   -webkit-box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.4);
   box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.4);
   text-shadow: 0px -1px 0px #000000;
-  filter: dropshadow(color=black, offx=0, offy=-1);
+  filter: dropshadow(color=#000000, offx=0, offy=-1);
   font-size: 2.3em;
   font-size: 2.3rem;
   line-height: 1em;
@@ -472,7 +472,7 @@ a.button:focus,
 input[type="reset"]:hover,
 input[type="submit"]:hover {
   background: rgba(141, 1, 4, 0.7);
-  color: white;
+  color: #fff;
   text-decoration: none; }
 
 /* Alignment */
@@ -559,7 +559,7 @@ input[type="submit"]:hover {
       text-transform: none;
       padding: 5px 15px;
       text-shadow: 0px -1px 0px #000000;
-      filter: dropshadow(color=black, offx=0, offy=-1);
+      filter: dropshadow(color=#000000, offx=0, offy=-1);
       font-size: 1.2em;
       display: block; }
     #mainHeader nav li a:hover,
@@ -597,7 +597,7 @@ input[type="submit"]:hover {
       font-size: 65px;
       color: #fff;
       text-shadow: 0px -1px 0px #000000;
-      filter: dropshadow(color=black, offx=0, offy=-1);
+      filter: dropshadow(color=#000000, offx=0, offy=-1);
       text-decoration: none;
       text-transform: none;
       overflow: visible; }
@@ -638,7 +638,7 @@ input[type="submit"]:hover {
       font-size: 35px;
       color: #fff;
       text-shadow: 0px -1px 0px #000000;
-      filter: dropshadow(color=black, offx=0, offy=-1);
+      filter: dropshadow(color=#000000, offx=0, offy=-1);
       text-decoration: none;
       text-transform: none;
       overflow: visible; }
@@ -685,9 +685,9 @@ h1.menu-toggle {
   h1.menu-toggle {
     margin: 0px;
     padding: 5px 0px;
-    color: white;
+    color: #fff;
     text-shadow: 0px -1px 0px #000000;
-    filter: dropshadow(color=black, offx=0, offy=-1); }
+    filter: dropshadow(color=#000000, offx=0, offy=-1); }
 
   .main-navigation ul {
     display: none; }
@@ -730,7 +730,7 @@ h1.menu-toggle {
       .banner li .slidetextBG h1 {
         font-size: 65px;
         text-shadow: 0px -1px 0px #000000;
-        filter: dropshadow(color=black, offx=0, offy=-1);
+        filter: dropshadow(color=#000000, offx=0, offy=-1);
         padding: 40px 20px;
         line-height: 1.1em; }
         .banner li .slidetextBG h1 strong, .banner li .slidetextBG h1 b, .banner li .slidetextBG h1 i, .banner li .slidetextBG h1 em, .banner li .slidetextBG h1 span {
@@ -758,7 +758,7 @@ h1.menu-toggle {
   /* IE10+ */
   background: linear-gradient(to bottom, #ebebeb 0%, #bdbdbd 100%);
   /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$lightBGtop', endColorstr='$lightBGbottom',GradientType=0 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$lightBGtop', endColorstr='$lightBGbottom',GradientType=0 );
   /* IE6-9 */
   padding: 55px 20px 150px 20px;
   margin: 0px;
@@ -777,7 +777,7 @@ h1.menu-toggle {
 
 .break.darkbg {
   background: none;
-  color: white; }
+  color: #fff; }
 
 .testimonial blockquote,
 .getstarted section {
@@ -841,7 +841,7 @@ h1.menu-toggle {
     #latestNewsContainer main .pageTitle a:visited,
     #latest-news main .pageTitle a,
     #latest-news main .pageTitle a:visited {
-      color: white; }
+      color: #fff; }
     #latestNewsContainer main .pageTitle a:hover,
     #latestNewsContainer main .pageTitle a:visited:hover,
     #latestNewsContainer main .pageTitle a:focus,
@@ -849,6 +849,24 @@ h1.menu-toggle {
     #latest-news main .pageTitle a:visited:hover,
     #latest-news main .pageTitle a:focus {
       color: #fffc00; }
+  #latestNewsContainer .entry-content h1,
+  #latest-news .entry-content h1 {
+    font-size: 18px; }
+  #latestNewsContainer .entry-content h2,
+  #latest-news .entry-content h2 {
+    font-size: 16px; }
+  #latestNewsContainer .entry-content h3,
+  #latest-news .entry-content h3 {
+    font-size: 14px; }
+  #latestNewsContainer .entry-content h4,
+  #latest-news .entry-content h4 {
+    font-size: 13px; }
+  #latestNewsContainer .entry-content h5,
+  #latest-news .entry-content h5 {
+    font-size: 12px; }
+  #latestNewsContainer .entry-content h6,
+  #latest-news .entry-content h6 {
+    font-size: 11px; }
 
 .home .hentry,
 .blog .hentry {
@@ -857,7 +875,7 @@ h1.menu-toggle {
 .thumbnailImage {
   -webkit-box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.4);
   box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.4);
-  border: 1px solid white; }
+  border: 1px solid #fff; }
 
 .entry-header .category {
   font-weight: 700;
@@ -910,10 +928,6 @@ footer.entry-meta {
   margin: 0px;
   padding: 0px;
   height: 0px; }
-.category-wods h2 {
-  font-size: 0.9em; }
-.category-wods h3 {
-  font-size: 1.3em; }
 
 /* ----- page -- */
 div#page main {
@@ -988,7 +1002,7 @@ article {
         font-family: 'Roboto Condensed';
         font-size: 1.5em;
         background: rgba(192, 1, 6, 0.7);
-        color: white;
+        color: #fff;
         cursor: pointer; }
       .tabbthat ul.tabs li a:hover,
       .tabbthat ul.tabs li a:visited:hover,
@@ -1018,12 +1032,12 @@ article {
 .ui-widget-content {
   border: none !important;
   background: none;
-  color: white; }
+  color: #fff; }
 
 .ui-widget-header {
   border: none !important;
   background: none;
-  color: white;
+  color: #fff;
   border: none; }
   .ui-widget-header li, .ui-widget-header a {
     display: block;
@@ -1076,7 +1090,7 @@ ul.ui-tabs-nav,
 .wp-caption {
   -webkit-box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.4);
   box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.4);
-  border: 1px solid white;
+  border: 1px solid #fff;
   margin-bottom: 1.5em;
   max-width: 100%; }
 
@@ -1098,7 +1112,7 @@ ul.ui-tabs-nav,
     width: 96%;
     -webkit-box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.4);
     box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.4);
-    border: 1px solid white; }
+    border: 1px solid #fff; }
   .gallery dd {
     margin: 0; }
 
@@ -1121,7 +1135,7 @@ ul.ui-tabs-nav,
       font-family: 'Roboto Condensed';
       font-size: 1.5em;
       background: rgba(192, 1, 6, 0.7);
-      color: white; }
+      color: #fff; }
     .galleryList li a:hover,
     .galleryList li a:visited:hover,
     .galleryList li a:focus {
@@ -1136,7 +1150,7 @@ ul.ui-tabs-nav,
 .entry-content img.aligncenter {
   -webkit-box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.4);
   box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.4);
-  border: 1px solid white;
+  border: 1px solid #fff;
   margin-bottom: 1em; }
 
 /* Make sure embeds and iframes fit their containers */
@@ -1206,7 +1220,7 @@ footer nav {
   footer nav a:visited {
     padding: 10px 5px;
     margin: 0px 10px;
-    color: white; }
+    color: #fff; }
   footer nav a:hover,
   footer nav a:visited:hover,
   footer nav a:focus {
@@ -1217,7 +1231,7 @@ footer nav {
     padding: 0px;
     display: inline; }
   footer nav li {
-    border-left: 1px solid white; }
+    border-left: 1px solid #fff; }
   footer nav li:first-child {
     border-left: none; }
 footer .credit {
@@ -1370,10 +1384,11 @@ p:empty {
 
   @page {
     margin: 0.5cm; }
-
   p, h2, h3 {
     orphans: 3;
     widows: 3; }
 
   h2, h3 {
     page-break-after: avoid; } }
+
+/*# sourceMappingURL=style.css.map */
