--- a/style.css
+++ b/style.css
@@ -612,8 +612,24 @@ input[type="submit"]:hover {
       z-index: 1;
       top: -42px;
       left: -115px; }
+  #mainHeader .header-contact-info {
+    position: absolute;
+    top: 13px;
+    right: 2%;
+    text-align: left;
+    padding-right: 10px;
+    font-weight: bold;
+    line-height: 1.2em;
+    text-shadow: 0px -1px 0px #000000;
+    filter: dropshadow(color=#000000, offx=0, offy=-1); }
+    #mainHeader .header-contact-info address {
+      margin: 0;
+      font-weight: normal; }
   #mainHeader nav {
     background: rgba(0, 0, 0, 0.7); }
+    #mainHeader nav .nav-phone-number {
+      color: rgba(255, 255, 255, 0.6);
+      float: right; }
 
 #stickyHeaderContainer {
   position: fixed;
