--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -39,7 +39,7 @@
 
 /* --------- content classes -- */
 .sticky {}
-.hentry {margin: 0 0 1.5em; min-height:180px; position:relative;}
+.container.hentry {margin-top: 1.3em; margin-bottom: 2.5em; padding: 10px 0; position:relative;}
 .byline,
 .updated {display: none;}
 .single .byline,
@@ -62,6 +62,9 @@
 		a:visited:hover,
 		a:focus {color: $linkColor;}
 	}
+	main h4.pageTitle {
+		font-size: 1em;
+	}
 	.entry-content {
 		h1 {font-size: 18px;}
 		h2 {font-size: 16px;}
@@ -69,10 +72,30 @@
 		h4 {font-size: 13px;}
 		h5 {font-size: 12px;}
 		h6 {font-size: 11px;}
+		.post-thumbnail-container {
+			float:right;
+			margin: -18px -33px 10px 15px;
+
+			padding: 4px 4px 0px 4px;
+			img {
+				@include blurshadow;
+				margin:0;
+				padding:0;
+			}
+		}
 	}
+	.post-thumbnail-container {background-image:url('images/Blue_Lines.png');}
+	.post-thumbnail-container:nth-of-type(2) { background-image:url('images/Orange_Lines.png'); }
+	.post-thumbnail-container:nth-of-type(3) { background-image:url('images/Red_Lines.png'); }
+	.post-thumbnail-container:nth-of-type(4) { background-image:url('images/Yellow_Lines.png'); }
+	.post-thumbnail-container:nth-of-type(5) { background-image:url('images/Green_Lines.png'); }
+	.post-thumbnail-container:nth-of-type(6) { background-image:url('images/Grey_Lines.png'); }
+	.post-thumbnail-container:nth-of-type(8) { background-image:url('images/Yellow_Lines.png'); }
+	.post-thumbnail-container:nth-of-type(9) { background-image:url('images/Green_Lines.png'); }
+	.post-thumbnail-container:nth-of-type(10) { background-image:url('images/Red_Lines.png'); }
 }
-.home,
-.blog {
+
+.home {
 	.hentry { margin-top: 20px; }
 }
 .thumbnailImage { @include thumbnailstyle; }
@@ -100,9 +123,6 @@ footer.entry-meta {text-align: right;}
 #masonry .post {width:28%; margin-right:4%;  padding-bottom:10px; margin-bottom:20px; border-bottom:1px solid rgba(0,0,0,0.2); overflow:hidden; display: block;
 	img {max-width: 100%;}
 
-}
-.category-wods {
-	div.entry-content + p {margin:0px; padding:0px; height:0px;}
 }
 
 /* ----- page -- */
