style tweaks for wods

--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -84,15 +84,7 @@
 			}
 		}
 	}
-	.post-thumbnail-container {background-image:url('images/Blue_Lines.png');}
-	.post-thumbnail-container:nth-of-type(2) { background-image:url('images/Orange_Lines.png'); }
-	.post-thumbnail-container:nth-of-type(3) { background-image:url('images/Red_Lines.png'); }
-	.post-thumbnail-container:nth-of-type(4) { background-image:url('images/Yellow_Lines.png'); }
-	.post-thumbnail-container:nth-of-type(5) { background-image:url('images/Green_Lines.png'); }
-	.post-thumbnail-container:nth-of-type(6) { background-image:url('images/Grey_Lines.png'); }
-	.post-thumbnail-container:nth-of-type(8) { background-image:url('images/Yellow_Lines.png'); }
-	.post-thumbnail-container:nth-of-type(9) { background-image:url('images/Green_Lines.png'); }
-	.post-thumbnail-container:nth-of-type(10) { background-image:url('images/Red_Lines.png'); }
+	.category-wods {margin-bottom:2em;}
 }
 
 .home {
