--- a/style.css
+++ b/style.css
@@ -898,33 +898,9 @@ h1.menu-toggle {
       box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.4);
       margin: 0;
       padding: 0; }
-  #latestNewsContainer .post-thumbnail-container,
-  #latest-news .post-thumbnail-container {
-    background-image: url("images/Blue_Lines.png"); }
-  #latestNewsContainer .post-thumbnail-container:nth-of-type(2),
-  #latest-news .post-thumbnail-container:nth-of-type(2) {
-    background-image: url("images/Orange_Lines.png"); }
-  #latestNewsContainer .post-thumbnail-container:nth-of-type(3),
-  #latest-news .post-thumbnail-container:nth-of-type(3) {
-    background-image: url("images/Red_Lines.png"); }
-  #latestNewsContainer .post-thumbnail-container:nth-of-type(4),
-  #latest-news .post-thumbnail-container:nth-of-type(4) {
-    background-image: url("images/Yellow_Lines.png"); }
-  #latestNewsContainer .post-thumbnail-container:nth-of-type(5),
-  #latest-news .post-thumbnail-container:nth-of-type(5) {
-    background-image: url("images/Green_Lines.png"); }
-  #latestNewsContainer .post-thumbnail-container:nth-of-type(6),
-  #latest-news .post-thumbnail-container:nth-of-type(6) {
-    background-image: url("images/Grey_Lines.png"); }
-  #latestNewsContainer .post-thumbnail-container:nth-of-type(8),
-  #latest-news .post-thumbnail-container:nth-of-type(8) {
-    background-image: url("images/Yellow_Lines.png"); }
-  #latestNewsContainer .post-thumbnail-container:nth-of-type(9),
-  #latest-news .post-thumbnail-container:nth-of-type(9) {
-    background-image: url("images/Green_Lines.png"); }
-  #latestNewsContainer .post-thumbnail-container:nth-of-type(10),
-  #latest-news .post-thumbnail-container:nth-of-type(10) {
-    background-image: url("images/Red_Lines.png"); }
+  #latestNewsContainer .category-wods,
+  #latest-news .category-wods {
+    margin-bottom: 2em; }
 
 .home .hentry {
   margin-top: 20px; }
