--- a/style.css
+++ b/style.css
@@ -442,6 +442,7 @@ input[type="submit"] {
   display: block;
   width: 100%;
   clear: both;
+  margin: 0.5em 0;
   text-align: center;
   text-decoration: none;
   padding: 0.5em 1.5em;
@@ -458,9 +459,7 @@ input[type="submit"] {
   font-size: 2.3rem;
   line-height: 1em;
   text-transform: uppercase;
-  font-weight: 700;
-  -webkit-appearance: button;
-  cursor: pointer; }
+  font-weight: 700; }
 
 button:hover,
 .button:hover,
@@ -902,9 +901,6 @@ h1.menu-toggle {
   #latestNewsContainer .category-wods,
   #latest-news .category-wods {
     margin-bottom: 2em; }
-
-.home .hentry {
-  margin-top: 20px; }
 
 .thumbnailImage {
   -webkit-box-shadow: 1px 1px 3px 0px rgba(0, 0, 0, 0.4);
