--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -108,11 +108,15 @@
 	a:visited:hover,
 	a:focus {color:$fadedLinkHoverColor;}
 }
-.post.type-post .entry-meta {
-	background: $darkBGColor;
-	padding:3px 5px;
-	display: inline-block;
-	margin-bottom: 1em;
+.blog,
+.single,
+.archive {
+	.post.type-post .entry-meta {
+		background: $darkBGColor;
+		padding:3px 5px;
+		display: inline-block;
+		margin-bottom: 1em;
+	}
 }
 .top-meta {margin: -20px 0px 10px 0px; text-align:right;}
 footer.entry-meta {text-align: right;}
@@ -127,7 +131,12 @@ footer.entry-meta {text-align: right;}
 div#page {
 	main {padding-top:240px;}
 }
-article {position: relative;}
+article {
+	position: relative;
+	.pageTitle {
+		display: block;
+	}
+}
 .pageTitle {background: $darkBGColor; margin:20px 0px;padding: 16px 12px 12px 12px; display: inline-table; color:#fff;}
 .postTitle {background: $darkBGColor; font-size:1.4em; line-height: 1em; padding:10px 5px 5px 5px; margin-top: 3.2em;}
 
