--- a/style.css
+++ b/style.css
@@ -978,6 +978,11 @@ article {
   article .pageTitle {
     display: block; }
 
+.marginTop {
+  margin-top: 3em; }
+  .marginTop.oneHalf {
+    margin-top: 3em; }
+
 .pageTitle {
   background: rgba(0, 0, 0, 0.7);
   margin: 20px 0px;
